# uncanny

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
Formula/: uncanny.rb
benchmarks/corpus/ai/: academic_paper.txt  blog_post.txt  casual_ai.txt  code_review.txt  cover_letter.txt  creative_ai.txt  documentation.txt  email_response.txt  essay_ai.txt  linkedin_post.txt  news_article.txt  pr_description.txt  product_description.txt  short_ai.txt  slack_ai.txt  summary.txt  technical_doc.txt  tutorial.txt
benchmarks/corpus/human/: blog_personal.txt  code_review_human.txt  commit_messages.txt  debug_notes.txt  developer_slack.txt  email_casual.txt  forum_post.txt  journal_entry.txt  meeting_notes.txt  personal_essay.txt  polished_human.txt  recipe_review.txt  reddit_rant.txt  short_human.txt  standup_update.txt  technical_human.txt  text_messages.txt  tweet_thread.txt
docs/: docusaurus.config.ts  sidebars.ts
docs/docs/: benchmarks.md  ci-integration.md  cli-reference.md  installation.md  intro.md  limitations.md  quickstart.md  visualizer.md
docs/docs/analyzers/: burstiness.md  compression.md  ensemble.md  overview.md  perplexity.md
scripts/: serve-site.sh  update-homebrew.sh
site/: index.html
src/uncanny/: __init__.py  __main__.py  cli.py  ensemble.py  tokenizer.py  types.py
tests/: test_bench.py  test_compression.py  test_ensemble.py  test_tokenizer.py
(+13 files in other folders)
